User table: Added button for single user edit Added delete-trash-icon (not working) Roles are displayed correct per user Guest user is not visible if anonymous browsing is disabled

--- a/cps/static/css/style.css
+++ b/cps/static/css/style.css
@@ -51,9 +51,11 @@ body h2 {
   color:#444;
 }
 
-a, .danger,.book-remove, .editable-empty, .editable-empty:hover { color: #45b29d; }
+a, .danger, .book-remove, .user-remove, .editable-empty, .editable-empty:hover { color: #45b29d; }
 
 .book-remove:hover { color: #23527c; }
+
+.user-remove:hover { color: #23527c; }
 
 .btn-default a { color: #444; }
 
